# keekijanai

./: .dockerignore  .editorconfig  .env  .eslintignore  .eslintrc  .gitignore  Cargo.toml  LICENSE  README.md  db-service.yml  gulpfile.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme_CN.md  tsconfig.json  turbo.json
.github/workflows/: main.yml
doc/design/: overview.drawio
scripts/: constants.ts  publish-frontend.ts  util.ts
scripts/build-node-wrapper/: Dockerfile  run.sh
src/backend/: Cargo.toml
src/backend-router/: Cargo.toml
src/backend-router/src/: error.rs  lib.rs  method.rs  request.rs  response.rs  route.rs  router.rs  util.rs
src/backend-router/src/middleware/: error_middleware.rs  mod.rs  post_middleware.rs  pre_middleware.rs
src/backend-router/src/service/: request_service.rs  router_service.rs
src/backend-router/tests/: middleware.rs  route.rs  util.rs
src/backend-server/: Cargo.toml
src/backend-server/src/: main.rs
src/backend-server/src/controllers/: auth.rs  ping.rs
src/backend-server/src/core/: kk_error.rs  mod.rs
src/backend/src/: lib.rs
src/backend/src/core/: db.rs  error.rs  mod.rs
src/backend/src/core/controller/: method.rs  mod.rs  resp_error_middleware.rs  response.rs  router.rs  tags.rs
src/backend/src/core/db/: active_column.rs  mod.rs  pool.rs
src/backend/src/core/db/active_column/: active_column.rs  mod.rs  poem_types.rs
src/backend/src/core/error/: comm_error.rs  keekijanai_error.rs  mod.rs
src/backend/src/core/setting/: mod.rs
src/backend/src/modules/: controller.rs  mod.rs
src/backend/src/modules/auth/: controller.rs  error.rs  mod.rs  service.rs
src/backend/src/modules/auth/error/: convert_error_middleware.rs  errors.rs
src/backend/src/modules/auth/middleware/: auth_guard.rs  mod.rs  user_info.rs
src/backend/src/modules/auth/oauth2/: core.rs  github.rs  mod.rs
src/backend/src/modules/comment/: controller.rs  data.rs  mod.rs  model.rs  service.rs
src/backend/src/modules/ping/: controller.rs
src/backend/src/modules/star/: controller.rs  model.rs  service.rs
src/backend/src/modules/stat/: controller.rs  mod.rs  model.rs  service.rs
src/backend/src/modules/stat/middleware/: uuid.rs
src/backend/src/modules/time/: controller.rs
src/backend/src/modules/user/: mod.rs  model.rs  service.rs
src/backend/src/modules/user/error/: convert_error_middleware.rs  errors.rs
src/keekijanai-frontend-core/: .eslintrc.js  package.json
src/keekijanai-frontend-core/src/: index.ts
src/keekijanai-frontend-core/src/core/: service.ts
src/keekijanai-frontend-core/src/core/request/: ajax.ts  index.ts  type.ts
src/keekijanai-frontend-core/src/modules/: index.ts
src/keekijanai-frontend-core/src/modules/auth/: api.ts  index.ts  service.ts
src/keekijanai-frontend-core/src/modules/comment/: api.ts  service.ts
src/keekijanai-frontend-core/src/modules/star/: api.ts  service.ts
src/keekijanai-frontend-core/src/modules/stat/: api.ts  index.ts  service.ts
src/keekijanai-frontend-core/src/modules/time/: api.ts  service.ts
src/keekijanai-frontend-toolkit/: package.json  pnpm-lock.yaml  tsconfig.json
src/keekijanai-frontend-toolkit/src/: build.ts
src/keekijanai-gatsby-vercel-demo/: package.json
src/keekijanai-gatsby-vercel-demo/api/: Cargo.toml  keekijanai.rs
src/keekijanai-gatsby-vercel-demo/src/pages/: index.tsx
src/keekijanai-react/: tsconfig.prod.json
src/keekijanai-react-dev-demo/: tsconfig.json
src/keekijanai-react-dev-demo/public/: template.html
src/keekijanai-react-dev-demo/src/: App.tsx
src/keekijanai-react/src/common/: helper.ts
src/keekijanai-react/src/common/i18n/: backend-plugin.ts  instance.ts
src/keekijanai-react/src/common/provider/: Provider.tsx
src/keekijanai-react/src/common/service/: useService.ts
src/keekijanai-react/src/components/: ConfirmPopover.tsx  Statical.tsx  index.ts
src/keekijanai-react/src/views/: index.ts
src/keekijanai-react/src/views/Auth/: AuthAvatar.tsx  AuthModal.tsx  OAuth2CallbackRedirect.tsx  index.ts
src/keekijanai-react/src/views/Comment/: Comment.tsx  index.ts  provider.ts
src/keekijanai-react/src/views/Star/: Star.tsx
src/keekijanai-serve-core/: Cargo.toml
src/keekijanai-serve-core/src/: lib.rs
src/keekijanai-serve-core/src/core/controller/: resp_error_middleware.rs
src/keekijanai-serve-core/src/core/error/: comm_error.rs  mod.rs
src/keekijanai-serve-core/src/core/service/: mod.rs
src/keekijanai-serve-core/src/core/setting/: mod.rs
src/keekijanai-serve-core/src/modules/: mod.rs
src/keekijanai-serve-core/src/modules/auth/: controller.rs  mod.rs
src/keekijanai-serve-core/src/modules/star/: model.rs
src/keekijanai-serve-core/src/modules/time/: service.rs
src/keekijanai-serve-rust-server-demo/: Cargo.toml
src/keekijanai-serve-rust-server-demo/src/: main.rs
src/keekijanai-serve-vercel-adapter/: Cargo.toml
src/keekijanai-serve-vercel-adapter/src/: lib.rs
src/serve-resp-err/: Cargo.toml
src/serve-resp-err-macro/: Cargo.toml
src/serve-resp-err-macro/examples/: basic.rs
src/serve-resp-err-macro/src/: lib.rs
tools/: generate-packages.mjs  prepare-local-packages.mjs
(+8 files in other folders)
