[package]
name = "backend-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.8"
anyhow = { version = "1.0" }
regex = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
derive_more = "0.99.16"
thiserror = "1.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
assert_matches = { version = "1.5" }
once_cell = { version = "1.8.0" }