[package]
name = "backend_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
routerify = "2"
qstring = "0.7.2"
anyhow = "1.0"
backend = { path = "../backend" }
derive_more = "0.99.16"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8"
log = "0.4"