[package]
name = "keekijanai-serve-vercel-adapter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1"
vercel_lambda = "*"
tokio = { version = "1", features = ["full"] }
keekijanai-serve-core = { path = "../keekijanai-serve-core" }
querystring = "1.1.0"
urlencoding = "2.1.0"
tracing-subscriber = "0.2"