[package]
name = "serve-resp-err"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
poem = { version = "1.2.7", features = ["compression", "anyhow"] }
