[package]
name = "index"
version = "1.0.0"
authors = [ "Your Name <your@site.com>" ]
edition = "2018"

[dependencies]
http = "0.1"
vercel_lambda = "*"

  [dependencies.keekijanai-serve-vercel-adapter]
  path = "../../keekijanai-serve-vercel-adapter"

[[bin]]
name = "keekijanai"
path = "/home/hpp2334/Project/keekijanai-v3/src/keekijanai-gatsby-vercel-demo/api/keekijanai.rs"
